add code to check speed limits on 02-COVID-19Acc-Original.ipynb

--- a/procedure/code/02-COVID-19Acc-Original.ipynb
+++ b/procedure/code/02-COVID-19Acc-Original.ipynb
@@ -259,6 +259,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Plot the Road Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "ox.plot_graph(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# Turn nodes and edges into geodataframes\n",
+    "nodes, edges = ox.graph_to_gdfs(G, nodes=True, edges=True)\n",
+    "\n",
+    "# Get unique counts of road segments for each speed limit\n",
+    "print(edges['maxspeed'].value_counts())\n",
+    "print(len(edges))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## \"Helper\" Functions\n",
     "\n",
     "The functions below are needed for our analysis later, let's take a look!\n",
@@ -319,6 +351,44 @@
     "    print(\"Number of nodes: {}\".format(network.number_of_nodes()))\n",
     "    print(\"Number of edges: {}\".format(network.number_of_edges()))\n",
     "    return(network)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre-process Street Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# G, hospitals, grid_file, pop_data = file_import (population_dropdown.value, place_dropdown.value)\n",
+    "G = network_setting(G)\n",
+    "# Create point geometries for each node in the graph, to make constructing catchment area polygons easier\n",
+    "for node, data in G.nodes(data=True):\n",
+    "    data['geometry']=Point(data['x'], data['y'])\n",
+    "# Modify code to react to processor dropdown (got rid of file_import function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "## Get unique counts for each road network\n",
+    "# Turn nodes and edges in geodataframes\n",
+    "nodes, edges = ox.graph_to_gdfs(G, nodes=True, edges=True)\n",
+    "\n",
+    "# Count\n",
+    "print(edges['maxspeed_fix'].value_counts())\n",
+    "print(len(edges))"
    ]
   },
   {
@@ -1058,7 +1128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
