reanalysis using census tract buffer

--- a/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
+++ b/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
@@ -133,14 +133,262 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How we got the data \n",
+    "explain where we got that data\n",
+    "https://data.census.gov/cedsci/table?q=&text=b1001%20acs&t=Age%20and%20Sex&g=0400000US17%241400000&tid=ACSST5Y2019.S0101, census tracts -> IL -> populations (age and sex) and ACS in the search bar\n",
+    "\n",
+    "https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html both census tracts, and place by IL \n",
+    "\n",
+    "- put shapefiles in data/raw/public/PopDataBuffered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in Illinois census tract geometry\n",
+    "illinois_tracts = gpd.read_file('./data/raw/public/PopDataBuffered/cb_2018_17_tract_500k.shp')\n",
+    "\n",
+    "# check \n",
+    "illinois_tracts.head()             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read in demographic data \n",
+    "# skiprows = [1,1] deletes first description row (1)\n",
+    "demographic_data = pd.read_csv('./data/raw/public/PopDataBuffered/ACSDT5Y2018.B01001_data_with_overlays_2021-10-28T145639.csv', sep = ',', skiprows = [1,1])\n",
+    "\n",
+    "# check\n",
+    "demographic_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract columns for ages 50+ \n",
+    "at_risk_csv = demographic_data[[\"GEO_ID\", \"NAME\", \"B01001_001E\", \"B01001_016E\", \"B01001_017E\", \"B01001_018E\",\n",
+    "\"B01001_019E\",\n",
+    "\"B01001_020E\",\n",
+    "\"B01001_021E\",\n",
+    "\"B01001_022E\",\n",
+    "\"B01001_023E\",\n",
+    "\"B01001_024E\",\n",
+    "\"B01001_025E\",\n",
+    "\"B01001_040E\",\n",
+    "\"B01001_041E\",\n",
+    "\"B01001_042E\",\n",
+    "\"B01001_043E\",\n",
+    "\"B01001_044E\",\n",
+    "\"B01001_045E\",\n",
+    "\"B01001_046E\",\n",
+    "\"B01001_047E\",\n",
+    "\"B01001_048E\",\n",
+    "\"B01001_049E\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check how many columns in df\n",
+    "len(at_risk_csv.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select and sum all columns that aren't geoid, name, and totalpop\n",
+    "at_risk_csv['OverFifty'] = at_risk_csv.iloc[:, 3:23].sum(axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# at_risk_csv.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check = demographic_data[[\"B01001_016E\", \"B01001_017E\", \"B01001_018E\",\n",
+    "\"B01001_019E\",\n",
+    "\"B01001_020E\",\n",
+    "\"B01001_021E\",\n",
+    "\"B01001_022E\",\n",
+    "\"B01001_023E\",\n",
+    "\"B01001_024E\",\n",
+    "\"B01001_025E\",\n",
+    "\"B01001_040E\",\n",
+    "\"B01001_041E\",\n",
+    "\"B01001_042E\",\n",
+    "\"B01001_043E\",\n",
+    "\"B01001_044E\",\n",
+    "\"B01001_045E\",\n",
+    "\"B01001_046E\",\n",
+    "\"B01001_047E\",\n",
+    "\"B01001_048E\",\n",
+    "\"B01001_049E\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check.sum(axis = 1)\n",
+    "# to see if they match .head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select total pop \n",
+    "at_risk_csv['TotalPop'] = at_risk_csv['B01001_001E']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop irrelevant columns \n",
+    "# don't run again until restarting :)\n",
+    "at_risk_csv = at_risk_csv.drop(at_risk_csv.columns[2:23], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename columns so they match for join by creating dict with old then new names for table we're joining\n",
+    "new_names = {\"GEO_ID\" : \"AFFGEOID\"}\n",
+    "at_risk_csv = at_risk_csv.rename(columns = new_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "at_risk_csv.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(illinois_tracts.crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set CRS to WGS84\n",
+    "illinois_tracts = illinois_tracts.to_crs(epsg = 4326)\n",
+    "\n",
+    "# select tracts from Cook and all adjacent counties \n",
+    "illinois_tracts = illinois_tracts.loc[(illinois_tracts[\"COUNTYFP\"] == '031') |\n",
+    "                                      (illinois_tracts[\"COUNTYFP\"] == '197') |\n",
+    "                                      (illinois_tracts[\"COUNTYFP\"] == '043') |\n",
+    "                                      (illinois_tracts[\"COUNTYFP\"] == '089') |\n",
+    "                                      (illinois_tracts[\"COUNTYFP\"] == '097') |\n",
+    "                                      (illinois_tracts[\"COUNTYFP\"] == '111')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "illinois_tracts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "illinois_tracts.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#atrisk_data is the name used later so define it now!\n",
+    "atrisk_data = illinois_tracts.merge(at_risk_csv, how='inner', on='AFFGEOID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atrisk_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check that there are same number of points in each \n",
+    "print(len(atrisk_data))\n",
+    "print(len(illinois_tracts))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data for at risk population\n",
-    "atrisk_data = gpd.read_file('./data/raw/public/PopData/Chicago_Tract.shp')\n",
-    "atrisk_data.head()"
+    "original_atrisk_data = gpd.read_file('./data/raw/public/PopData/Chicago_Tract.shp')\n",
+    "original_atrisk_data.head()"
    ]
   },
   {
@@ -914,7 +1162,7 @@
    "outputs": [],
    "source": [
     "# Save output to geopackage -- will name the layer according the dropdown parameters\n",
-    "result.to_file('data/derived/public/results.gpkg', \n",
+    "result.to_file('data/derived/public/results_reanalysis.gpkg', \n",
     "                layer='{}_{}'.format(population_dropdown.value,resource_dropdown.value), \n",
     "                driver='GPKG')"
    ]
