reanalysis try again

--- a/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
+++ b/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
@@ -1118,7 +1118,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Catchment for hospital   22 complete "
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "catchments = measure_acc_par(hospitals, pop_data, G, distances, weights, num_proc=processor_dropdown.value)"
