organize and comment code

--- a/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
+++ b/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
@@ -136,12 +136,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Illinois census tracts geometry can be downloaded from the United States Census Bureau's [Cartographic Boundary Shapefiles page](https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html) at Census Tracts --> Illinois\n",
+    "**Illinois census tracts geometry** can be downloaded from the United States Census Bureau's [Cartographic Boundary Shapefiles page](https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html)\n",
+    "- Census Tracts --> Illinois\n",
     "\n",
-    "Demographic data from the United States Census Bureau can be downloaded from the American Commnunity Survey [Advanced Search](https://data.census.gov/cedsci/table?text=b1001%20acs&t=Age%20and%20Sex&g=0400000US17%241400000&tid=ACSST5Y2019.S0101)\n",
-    "  - Topic --> Age and Sex\n",
-    "  - Geography --> All Census Tracts within Illinois\n",
-    "  - Product --> 2018: ACS 5-Year Estimates Subject Tables "
+    "**Demographic data** from the United States Census Bureau can be downloaded from the American Commnunity Survey [Advanced Search](https://data.census.gov/cedsci/table?text=b1001%20acs&t=Age%20and%20Sex&g=0400000US17%241400000&tid=ACSST5Y2019.S0101)\n",
+    "- Topic --> Age and Sex\n",
+    "- Geography --> All Census Tracts within Illinois\n",
+    "- Product --> 2018: ACS 5-Year Estimates Subject Tables "
    ]
   },
   {
