--- a/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
+++ b/procedure/code/04-COVID-19Acc-Reanalysis-323f21.ipynb
@@ -18,7 +18,8 @@
     "Reproduction Materials Available at: [RP-Kang Repository](https://github.com/derrickburt/RP-Kang-Improvements)\n",
     "\n",
     "Created: `8 Jun 2021`\n",
-    "Revised: `23 Aug 2021`\n"
+    "Revised: `23 Aug 2021`\n",
+    "Revised (Emma Waugh): `31 October 2021`"
    ]
   },
   {
@@ -26,7 +27,7 @@
    "metadata": {},
    "source": [
     "### Data\n",
-    "To perform the ESFCA method, three types of data are required, as follows: (1) road network, (2) population, and (3) hospital information. The road network can be obtained from the [OpenStreetMap Python Library, called OSMNX](https://github.com/gboeing/osmnx). The population data is available on the [American Community Survey](https://data.census.gov/cedsci/deeplinks?url=https%3A%2F%2Ffactfinder.census.gov%2F&tid=GOVSTIMESERIES.CG00ORG01). Lastly, hosptial information is also publically available on the [Homeland Infrastructure Foundation-Level Data](https://hifld-geoplatform.opendata.arcgis.com/datasets/hospitals?geometry=-94.504%2C40.632%2C-80.980%2C43.486)."
+    "To perform the ESFCA method, three types of data are required, as follows: (1) road network, (2) population, and (3) hospital information. The road network can be obtained from the [OpenStreetMap Python Library, called OSMNX](https://github.com/gboeing/osmnx). The population data is available on the [American Community Survey](https://data.census.gov/cedsci/deeplinks?url=https%3A%2F%2Ffactfinder.census.gov%2F&tid=GOVSTIMESERIES.CG00ORG01). Lastly, hospital information is also publically available on the [Homeland Infrastructure Foundation-Level Data](https://hifld-geoplatform.opendata.arcgis.com/datasets/hospitals?geometry=-94.504%2C40.632%2C-80.980%2C43.486)."
    ]
   },
   {
@@ -137,12 +138,12 @@
    "metadata": {},
    "source": [
     "**Illinois census tracts geometry** can be downloaded from the United States Census Bureau's [Cartographic Boundary Shapefiles page](https://www.census.gov/geographies/mapping-files/time-series/geo/carto-boundary-file.html)\n",
-    "- Census Tracts --> Illinois\n",
+    "- Census Tracts → Illinois\n",
     "\n",
     "**Demographic data** from the United States Census Bureau can be downloaded from the American Commnunity Survey [Advanced Search](https://data.census.gov/cedsci/table?text=b1001%20acs&t=Age%20and%20Sex&g=0400000US17%241400000&tid=ACSST5Y2019.S0101)\n",
-    "- Topic --> Age and Sex\n",
-    "- Geography --> All Census Tracts within Illinois\n",
-    "- Product --> 2018: ACS 5-Year Estimates Subject Tables "
+    "- Topic → Age and Sex\n",
+    "- Geography → All Census Tracts within Illinois\n",
+    "- Product → 2018: ACS 5-Year Estimates Subject Tables "
    ]
   },
   {
@@ -1382,8 +1383,17 @@
    "source": [
     "### References\n",
     "\n",
+    "Kang, J. Y., A. Michels, F. Lyu, Shaohua Wang, N. Agbodo, V. L. Freeman, and Shaowen Wang. 2020. Rapidly measuring spatial accessibility of COVID-19 healthcare resources: a case study of Illinois, USA. International Journal of Health Geographics 19 (1):1–17. DOI:10.1186/s12942-020-00229-x.\n",
+    "\n",
     "Luo, W., & Qi, Y. (2009). An enhanced two-step floating catchment area (E2SFCA) method for measuring spatial accessibility to primary care physicians. Health & place, 15(4), 1100-1107."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
